--- a/tec-auth-service/Dockerfile
+++ b/tec-auth-service/Dockerfile
@@ -1,40 +1,18 @@
-# Multi-stage build for TEC Auth Service
-
-# Stage 1: Build
 FROM node:18-alpine AS builder
-
 WORKDIR /app
-
-# Copy package files and install all dependencies
 COPY package*.json ./
+COPY prisma ./prisma/
 RUN npm ci
-
-# Copy source code
+RUN npx prisma generate
 COPY . .
-
-# Build TypeScript
 RUN npm run build
 
-# Stage 2: Production
 FROM node:18-alpine
-
 WORKDIR /app
-
-# Copy package files
 COPY package*.json ./
-
-# Install only production dependencies
-RUN npm ci --only=production && npm cache clean --force
-
-# Copy built files from builder
+COPY prisma ./prisma/
+RUN npm ci --only=production
+RUN npx prisma generate
 COPY --from=builder /app/dist ./dist
-
-# Expose port
 EXPOSE 5001
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=5s --start-period=15s --retries=3 \
-  CMD node -e "require('http').get('http://localhost:5001/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
-
-# Run the application
 CMD ["node", "dist/index.js"]
