--- a/tec-auth-service/Dockerfile
+++ b/tec-auth-service/Dockerfile
@@ -1,18 +1,16 @@
 FROM node:18-alpine AS builder
 WORKDIR /app
 COPY package*.json ./
-COPY prisma ./prisma/
 RUN npm ci
-RUN npx prisma generate
 COPY . .
+RUN npx prisma generate
 RUN npm run build
 
 FROM node:18-alpine
 WORKDIR /app
 COPY package*.json ./
-COPY prisma ./prisma/
 RUN npm ci --only=production
-RUN npx prisma generate
+COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
 COPY --from=builder /app/dist ./dist
 EXPOSE 5001
 CMD ["node", "dist/index.js"]
